tests/errors/missing_mapped_net.nm
abstract component Foo {
    pin X: passive;
    pin Y: passive;
}

abstract component Main {
    net A, B;

    Foo {
        X: A;
        Y: B;
    }

    Foo {
        X: A;
        Y: C;
    }
}